--- a/tooling/cli.rs/src/cli.yml
+++ b/tooling/cli.rs/src/cli.yml
@@ -15,7 +15,7 @@ subcommands:
           - config:
               short: c
               long: config
-              about: config JSON to merge with tauri.conf.json
+              about: JSON string or path to JSON file to merge with tauri.conf.json
               takes_value: true
           - exit-on-panic:
               short: e
@@ -66,7 +66,7 @@ subcommands:
           - config:
               short: c
               long: config
-              about: config JSON to merge with tauri.conf.json
+              about: JSON string or path to JSON file to merge with tauri.conf.json
               takes_value: true
           - target:
               short: t
