--- a/tooling/cli.js/package.json
+++ b/tooling/cli.js/package.json
@@ -16,6 +16,7 @@
     "url": "https://opencollective.com/tauri"
   },
   "scripts": {
+    "postinstall": "",
     "build": "rimraf ./dist && rollup -c --silent",
     "build-release": "rimraf ./dist && cross-env NODE_ENV=production rollup -c",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --runInBand --forceExit --no-cache --testPathIgnorePatterns=\"(build|dev)\"",
