feat: detect `data-tauri-drag-region` on parentElement, closes #3030

--- a/tooling/cli.rs/templates/plugin/with-api/.changes/config.json
+++ b/tooling/cli.rs/templates/plugin/with-api/.changes/config.json
@@ -20,9 +20,7 @@
     "tauri-plugin-{{ plugin_name }}-api": {
       "path": ".",
       "manager": "javascript",
-      "dependencies": [
-        "tauri-plugin-{{ plugin_name }}"
-      ]
+      "dependencies": ["tauri-plugin-{{ plugin_name }}"]
     }
   }
 }
