--- a/examples/api/package.json
+++ b/examples/api/package.json
@@ -1,24 +1,20 @@
 {
   "name": "svelte-app",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public",
+    "dev": "vite --clearScreen false --port 5000",
+    "build": "vite build",
+    "serve": "vite preview",
     "tauri": "node ../../tooling/cli.js/bin/tauri"
-  },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "17.1.0",
-    "@rollup/plugin-node-resolve": "11.2.0",
-    "rollup": "2.40.0",
-    "rollup-plugin-livereload": "2.0.0",
-    "rollup-plugin-svelte": "7.1.0",
-    "rollup-plugin-terser": "7.0.2",
-    "svelte": "3.35.0"
   },
   "dependencies": {
     "@tauri-apps/api": "../../tooling/api/dist",
-    "hotkeys-js": "^3.8.5",
-    "sirv-cli": "1.0.11"
+    "hotkeys-js": "^3.8.5"
+  },
+  "devDependencies": {
+    "svelte": "3.35.0",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
+    "vite": "^2.6.4"
   }
 }
