--- a/examples/updater/src-tauri/Cargo.toml
+++ b/examples/updater/src-tauri/Cargo.toml
@@ -21,3 +21,11 @@ custom-protocol = [ "tauri/custom-protocol" ]
 [[bin]]
 name = "updater-example"
 path = "src/main.rs"
+
+# default to small, optimized release binaries
+[profile.release]
+panic = "abort"
+codegen-units = 1
+lto = true
+incremental = false
+opt-level = "s"
