--- a/tooling/cli.rs/Cargo.toml
+++ b/tooling/cli.rs/Cargo.toml
@@ -30,7 +30,7 @@ notify = "4.0"
 shared_child = "1.0"
 toml_edit = "0.10"
 json-patch = "0.2"
-schemars = "0.8"
+schemars = { version = "0.8", features = ["url"] }
 toml = "0.5"
 valico = "3.6"
 handlebars = "4.1"
@@ -50,6 +50,7 @@ zeroize = "1.4"
 glob = "0.3"
 heck = "0.3"
 dialoguer = "0.9"
+url = { version = "2.2", features = [ "serde" ] }
 
 [target."cfg(windows)".dependencies]
 encode_unicode = "0.3"
@@ -58,7 +59,8 @@ encode_unicode = "0.3"
 heck = "0.3"
 
 [build-dependencies]
-schemars = "0.8"
+schemars = { version = "0.8", features = ["url"] }
 serde = { version = "1.0", features = [ "derive" ] }
 serde_json = "1.0"
 serde_with = "1.11"
+url = { version = "2.2", features = [ "serde" ] }
