Fix reproduction placeholder
Co-authored-by: Amr Bashir <amr.bashir2015@gmail.com>

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -17,7 +17,7 @@ body:
     attributes:
       label: "Describe the solution you'd like"
       description: A clear description of what change you would like
-      placeholder: "I'm always frustrated when..."
+      placeholder: "I would like to..."
     validations:
       required: true
 
