--- a/.github/ISSUE_TEMPLATE/docs_report.yml
+++ b/.github/ISSUE_TEMPLATE/docs_report.yml
@@ -1,4 +1,4 @@
-name: 📚 Docs report
+name: 📚 Docs Report
 description: Create a report to help us improve the docs
 title: "[docs] "
 labels: 'type: documentation'
