--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -8,7 +8,7 @@ body:
       value: |
         ## First of all
         1. Please search for [existing issues](https://github.com/tauri-apps/tauri/issues?q=is%3Aissue) about this problem first.
-        2. Make sure `rustc` and all relevant packages are up to date.
+        2. Make sure `rustc` and all relevant Tauri packages are up to date.
         3. Make sure it's not an issue with something else you are using.
         4. Remember to follow our community guidelines and be friendly.
 
