--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -9,7 +9,7 @@ body:
         ## First of all
         1. Please search for [existing issues](https://github.com/tauri-apps/tauri/issues?q=is%3Aissue) about this problem first.
         2. Make sure `rustc` and all relevant Tauri packages are up to date.
-        3. Make sure it's not an issue with something else you are using.
+        3. Make sure it's an issue with Tauri and not something else you are using.
         4. Remember to follow our community guidelines and be friendly.
 
   - type: textarea
