--- a/core/tauri-macros/Cargo.toml
+++ b/core/tauri-macros/Cargo.toml
@@ -19,7 +19,8 @@ proc-macro = true
 proc-macro2 = "1"
 quote = "1"
 syn = { version = "1", features = [ "full" ] }
-tauri-codegen = { version = "1.0.0-beta.4", path = "../tauri-codegen" }
+tauri-codegen = { version = "1.0.0-beta.4", default-features = false, path = "../tauri-codegen" }
 
 [features]
 custom-protocol = [ ]
+compression = [ "tauri-codegen/compression" ]
