--- a/tooling/create-tauri-app/package.json
+++ b/tooling/create-tauri-app/package.json
@@ -35,8 +35,7 @@
     "chalk": "4.1.2",
     "commander": "8.1.0",
     "execa": "5.0.0",
-    "inquirer": "^8.0.0",
-    "minimist": "^1.2.5",
+    "inquirer": "8.0.0",
     "scaffe": "1.2.0"
   },
   "devDependencies": {
