--- a/tooling/create-tauri-app/package.json
+++ b/tooling/create-tauri-app/package.json
@@ -33,9 +33,9 @@
   },
   "dependencies": {
     "chalk": "4.1.2",
-    "execa": "^6.0.0",
-    "inquirer": "^8.0.0",
-    "minimist": "^1.2.5",
+    "commander": "8.1.0",
+    "execa": "5.0.0",
+    "inquirer": "8.0.0",
     "scaffe": "1.2.0"
   },
   "devDependencies": {
@@ -45,7 +45,6 @@
     "@rollup/plugin-typescript": "8.3.0",
     "@types/cross-spawn": "6.0.2",
     "@types/inquirer": "8.1.3",
-    "@types/minimist": "1.2.2",
     "@types/semver": "7.3.9",
     "@typescript-eslint/eslint-plugin": "5.8.1",
     "@typescript-eslint/parser": "5.8.1",
