Add feature flag and change file

--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -140,6 +140,7 @@ http-request = [ ]
 notification-all = [ "notify-rust" ]
 global-shortcut-all = [ ]
 os-all = [ "os_info" ]
+egui = [ ]
 
 [[example]]
 name = "commands"
