Field / Project rename as requested

--- a/examples/cpp-dll/src-tauri/Cargo.toml
+++ b/examples/cpp-dll/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "dll1"
+name = "tauri_app"
 version = "0.1.0"
 description = "A very simple Dll Library that runs tauri and launches a webview window"
 edition = "2021"
