--- a/core/tauri-runtime-wry/Cargo.toml
+++ b/core/tauri-runtime-wry/Cargo.toml
@@ -20,13 +20,12 @@ tauri-utils = { version = "1.0.0-beta.3", path = "../tauri-utils" }
 uuid = { version = "0.8.2", features = [ "v4" ] }
 infer = "0.4"
 
-####### egui
-epi = { git = "https://github.com/wusyong/egui", branch = "tao" }
-egui-tao = { git = "https://github.com/wusyong/egui", branch = "tao", features = ["epi"] }
-egui_glow = { git = "https://github.com/wusyong/egui", branch = "tao" }
-tao-glutin = { git = "https://github.com/wusyong/glutin", branch = "tao", version = "0.1.0"}
-glow = "0.11"
-once_cell = "1.8"
+epi = { git = "https://github.com/wusyong/egui", branch = "tao", optional = true }
+egui-tao = { git = "https://github.com/wusyong/egui", branch = "tao", features = ["epi"], optional = true }
+egui_glow = { git = "https://github.com/wusyong/egui", branch = "tao", optional = true }
+tao-glutin = { git = "https://github.com/wusyong/glutin", branch = "tao", version = "0.1.0", optional = true }
+glow = { version = "0.11", optional = true }
+once_cell = { version = "1.8", optional = true}
 
 [target."cfg(windows)".dependencies]
 ico = "0.1"
@@ -45,3 +44,4 @@ gtk = { version = "0.14", features = [ "v3_20" ] }
 [features]
 dox = [ "wry/dox" ]
 system-tray = [ "wry/tray", "tauri-runtime/system-tray" ]
+egui = ["epi", "egui-tao", "egui_glow", "tao-glutin", "glow", "once_cell"]
