--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -140,7 +140,7 @@ http-request = [ ]
 notification-all = [ "notify-rust" ]
 global-shortcut-all = [ ]
 os-all = [ "os_info" ]
-egui = ["epi"]
+egui = ["epi", "tauri-runtime-wry/egui"]
 
 [[example]]
 name = "commands"
