feat: improve `CSP` security with nonces and hashes, add `devCsp` [TRI-004] (#8)

--- a/core/tauri-codegen/Cargo.toml
+++ b/core/tauri-codegen/Cargo.toml
@@ -13,6 +13,8 @@ exclude = [ ".license_template", "CHANGELOG.md", "/target" ]
 readme = "README.md"
 
 [dependencies]
+sha2 = "0.9"
+base64 = "0.13"
 blake3 = { version = "1.2", features = [ "rayon" ] }
 proc-macro2 = "1"
 quote = "1"
