--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,9 @@ members = [
 exclude = [
   # examples that can be compiled with the tauri CLI
   "examples/api/src-tauri",
-  "examples/updater/src-tauri"
+  "examples/updater/src-tauri",
+  "examples/resources/src-tauri",
+  "examples/sidecar/src-tauri"
 ]
 
 # default to small, optimized workspace release binaries
