--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -115,6 +115,7 @@ api-all = [
 ]
 updater = [ "minisign-verify", "base64" ]
 system-tray = [ "tauri-runtime/system-tray", "tauri-runtime-wry/system-tray" ]
+macos-private-api = [ "tauri-runtime/macos-private-api", "tauri-runtime-wry/macos-private-api" ]
 reqwest-client = [ "reqwest", "bytes" ]
 fs-all = [ "fs-write-binary-file" ]
 fs-read-text-file = [ ]
