feat: scope the `fs` API and the `asset` protocol [TRI-026] [TRI-010] [TRI-011] (#10)

--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -75,6 +75,7 @@ os_info = { version = "3.0.9", optional = true }
 futures-lite = "1.12"
 epi = { git = "https://github.com/wusyong/egui", branch = "tao", optional = true }
 regex = "1.5"
+glob = "0.3"
 
 [target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
 gtk = { version = "0.14", features = [ "v3_20" ] }
@@ -111,7 +112,8 @@ api-all = [
   "os-all",
   "dialog-all",
   "updater",
-  "path-all"
+  "path-all",
+  "protocol-all"
 ]
 updater = [ "minisign-verify", "base64" ]
 system-tray = [ "tauri-runtime/system-tray", "tauri-runtime-wry/system-tray" ]
@@ -142,6 +144,8 @@ http-request = [ ]
 notification-all = [ "notify-rust" ]
 global-shortcut-all = [ ]
 os-all = [ "os_info" ]
+protocol-all = [ "protocol-asset" ]
+protocol-asset = [ ]
 egui = ["epi", "tauri-runtime-wry/egui"]
 
 [[example]]
