--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -1,11 +1,6 @@
 [package]
-name = "tauri"
-version = "1.0.0-beta.8"
-authors = [ "Tauri Programme within The Commons Conservancy" ]
-categories = [ "gui", "web-programming" ]
-license = "Apache-2.0 OR MIT"
-homepage = "https://tauri.studio"
-repository = "https://github.com/tauri-apps/tauri"
+authors = ["Tauri Programme within The Commons Conservancy"]
+categories = ["gui", "web-programming"]
 description = "Make tiny, secure apps for all desktop platforms with Tauri"
 edition = "2021"
 rust-version = "1.56"
@@ -14,9 +9,14 @@ exclude = [
   "/.scripts",
   ".license_template",
   "CHANGELOG.md",
-  "/target"
+  "/target",
 ]
+homepage = "https://tauri.studio"
+license = "Apache-2.0 OR MIT"
+name = "tauri"
 readme = "README.md"
+repository = "https://github.com/tauri-apps/tauri"
+version = "1.0.0-beta.8"
 
 [package.metadata.docs.rs]
 default-features = false
@@ -26,11 +26,11 @@ default-target = "x86_64-unknown-linux-gnu"
 targets = [
   "x86_64-pc-windows-msvc",
   "x86_64-unknown-linux-gnu",
-  "x86_64-apple-darwin"
+  "x86_64-apple-darwin",
 ]
 
 [package.metadata.cargo-udeps.ignore]
-normal = [ "attohttpc" ]
+normal = ["attohttpc"]
 
 [dependencies]
 serde_json = { version = "1.0", features = [ "raw_value" ] }
@@ -46,16 +46,16 @@ tauri-macros = { version = "1.0.0-beta.5", path = "../tauri-macros" }
 tauri-utils = { version = "1.0.0-beta.3", path = "../tauri-utils" }
 tauri-runtime-wry = { version = "0.2.1", path = "../tauri-runtime-wry", optional = true }
 rand = "0.8"
-tempfile = "3"
 semver = "1.0"
 serde_repr = "0.1"
+state = "0.5"
+tar = "0.4"
+tempfile = "3"
 zip = "0.5"
 ignore = "0.4"
 either = "1.6"
-tar = "0.4"
 flate2 = "1.0"
 http = "0.2"
-state = "0.5"
 bincode = "1.3"
 dirs-next = "2.0"
 percent-encoding = "2.1"
@@ -78,8 +78,8 @@ regex = "1.5"
 glob = "0.3"
 
 [target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
-gtk = { version = "0.14", features = [ "v3_20" ] }
 glib = "0.14"
+gtk = {version = "0.14", features = ["v3_20"]}
 
 [target."cfg(target_os = \"macos\")".dependencies]
 embed_plist = "1.2"
@@ -88,15 +88,15 @@ embed_plist = "1.2"
 cfg_aliases = "0.1.1"
 
 [dev-dependencies]
+mockito = "0.30"
 proptest = "1.0.0"
-serde_json = "1.0"
-tauri = { path = "." }
-serde = { version = "1.0", features = [ "derive" ] }
 quickcheck = "1.0.3"
 quickcheck_macros = "1.0.0"
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
+tauri = {path = "."}
 tokio-test = "0.4.2"
 tokio = { version = "1.15", features = [ "full" ] }
-mockito = "0.30"
 
 [features]
 default = [ "wry", "compression" ]
@@ -106,46 +106,118 @@ wry = [ "tauri-runtime-wry" ]
 cli = [ "clap" ]
 custom-protocol = [ "tauri-macros/custom-protocol" ]
 api-all = [
-  "notification-all",
-  "global-shortcut-all",
-  "shell-all",
-  "os-all",
+  "clipboard-all",
   "dialog-all",
-  "updater",
+  "fs-all",
+  "global-shortcut-all",
+  "http-all",
+  "notification-all",
+  "os-all",
   "path-all",
-  "protocol-all"
+  "process-all",
+  "protocol-all",
+  "shell-all",
+  "window-all"
 ]
-updater = [ "minisign-verify", "base64" ]
-system-tray = [ "tauri-runtime/system-tray", "tauri-runtime-wry/system-tray" ]
-macos-private-api = [ "tauri-runtime/macos-private-api", "tauri-runtime-wry/macos-private-api" ]
-reqwest-client = [ "reqwest", "bytes" ]
-fs-all = [ "fs-write-binary-file" ]
-fs-read-text-file = [ ]
-fs-read-binary-file = [ ]
-fs-write-file = [ ]
-fs-write-binary-file = [ "base64" ]
-fs-read-dir = [ ]
-fs-copy-file = [ ]
-fs-create-dir = [ ]
-fs-remove-dir = [ ]
-fs-remove-file = [ ]
-fs-rename-file = [ ]
-path-all = [ ]
-window-all = [ ]
+macos-private-api = ["tauri-runtime/macos-private-api", "tauri-runtime-wry/macos-private-api"]
+clipboard-all = ["clipboard-write-text", "clipboard-read-text"]
+clipboard-read-text = []
+clipboard-write-text = []
+dialog-all = ["dialog-open", "dialog-save", "dialog-message", "dialog-ask"]
+dialog-ask = []
+dialog-confirm = []
+dialog-message = []
+dialog-open = []
+dialog-save = []
+fs-all = [
+  "fs-copy-file",
+  "fs-create-dir",
+  "fs-read-binary-file",
+  "fs-read-dir",
+  "fs-read-text-file",
+  "fs-remove-dir",
+  "fs-remove-file",
+  "fs-rename-file",
+  "fs-write-binary-file",
+  "fs-write-file"
+]
+fs-copy-file = []
+fs-create-dir = []
+fs-read-binary-file = []
+fs-read-dir = []
+fs-read-text-file = []
+fs-remove-dir = []
+fs-remove-file = []
+fs-rename-file = []
+fs-write-binary-file = ["base64"]
+fs-write-file = []
+global-shortcut-all = []
+http-all = ["http-request"]
+http-request = []
+notification-all = ["notify-rust", "dialog-ask"]
+os-all = ["os_info"]
+path-all = []
+process-all = ["process-relaunch", "process-exit"]
+process-exit = []
+process-relaunch = []
+protocol-all = ["protocol-asset"]
+protocol-asset = []
+reqwest-client = ["reqwest", "bytes"]
+shell-all = ["shell-execute", "shell-open"]
+shell-execute = ["shared_child", "os_pipe"]
+shell-open = ["open"]
+system-tray = ["tauri-runtime/system-tray", "tauri-runtime-wry/system-tray"]
+updater = ["minisign-verify", "base64", "dialog-ask"]
+window-all = [
+  "window-create",
+  "window-center",
+  "window-request-user-attention",
+  "window-set-resizable",
+  "window-set-title",
+  "window-maximize",
+  "window-unmaximize",
+  "window-minimize",
+  "window-unminimize",
+  "window-show",
+  "window-hide",
+  "window-close",
+  "window-set-decorations",
+  "window-set-always-on-top",
+  "window-set-size",
+  "window-set-min-size",
+  "window-set-max-size",
+  "window-set-position",
+  "window-set-fullscreen",
+  "window-set-focus",
+  "window-set-icon",
+  "window-set-skip-taskbar",
+  "window-start-dragging",
+  "window-print",
+]
 window-create = [ ]
-shell-all = [ "shell-open", "shell-execute" ]
-shell-execute = [ "shared_child", "os_pipe" ]
-shell-open = [ "open" ]
-dialog-all = [ "dialog-open", "dialog-save" ]
-dialog-open = [ ]
-dialog-save = [ ]
-http-all = [ ]
-http-request = [ ]
-notification-all = [ "notify-rust" ]
-global-shortcut-all = [ ]
-os-all = [ "os_info" ]
-protocol-all = [ "protocol-asset" ]
-protocol-asset = [ ]
+window-center = [ ]
+window-request-user-attention = [ ]
+window-set-resizable = [ ]
+window-set-title = [ ]
+window-maximize = [ ]
+window-unmaximize = [ ]
+window-minimize = [ ]
+window-unminimize = [ ]
+window-show = [ ]
+window-hide = [ ]
+window-close = [ ]
+window-set-decorations = [ ]
+window-set-always-on-top = [ ]
+window-set-size = [ ]
+window-set-min-size = [ ]
+window-set-max-size = [ ]
+window-set-position = [ ]
+window-set-fullscreen = [ ]
+window-set-focus = [ ]
+window-set-icon = [ ]
+window-set-skip-taskbar = [ ]
+window-start-dragging = [ ]
+window-print = [ ]
 egui = ["epi", "tauri-runtime-wry/egui"]
 
 [[example]]
