--- a/tooling/cli.rs/Cargo.toml
+++ b/tooling/cli.rs/Cargo.toml
@@ -56,6 +56,9 @@ url = { version = "2.2", features = [ "serde" ] }
 [target."cfg(windows)".dependencies]
 encode_unicode = "0.3"
 
+[target."cfg(not(windows))".dependencies]
+humansize = "1.1"
+
 [target."cfg(target_os = \"linux\")".build-dependencies]
 heck = "0.4"
 
