--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -100,8 +100,11 @@ tauri = {path = "."}
 tokio-test = "0.4.2"
 tokio = { version = "1.15", features = [ "full" ] }
 
-[target."cfg(windows)".dev-dependencies]
-webview2-com = "0.7.0"
+[target."cfg(windows)".dev-dependencies.windows]
+version = "0.29.0"
+features = [
+  "Win32_Foundation",
+]
 
 [features]
 default = [ "wry", "compression" ]
