feat(examples): add egui example

--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -74,6 +74,7 @@ minisign-verify = { version = "0.2", optional = true }
 os_info = { version = "3.0.9", optional = true }
 futures-lite = "1.12"
 epi = { git = "https://github.com/wusyong/egui", branch = "tao", optional = true }
+egui_ = { git = "https://github.com/wusyong/egui", branch = "tao", package = "egui", optional = true }
 
 [target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
 gtk = { version = "0.14", features = [ "v3_20" ] }
@@ -140,7 +141,7 @@ http-request = [ ]
 notification-all = [ "notify-rust" ]
 global-shortcut-all = [ ]
 os-all = [ "os_info" ]
-egui = ["epi", "tauri-runtime-wry/egui"]
+egui = ["epi", "egui_", "tauri-runtime-wry/egui"]
 
 [[example]]
 name = "commands"
@@ -173,3 +174,8 @@ path = "../../examples/resources/src-tauri/src/main.rs"
 [[example]]
 name = "streaming"
 path = "../../examples/streaming/src-tauri/src/main.rs"
+
+[[example]]
+name = "egui"
+path = "../../examples/egui/main.rs"
+required-features = ["egui"]
