--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -69,7 +69,7 @@ jobs:
       - name: copy docs
         working-directory: ./tauri
         run: |
-          cp -r docs/!(.templates) ${{ github.workspace }}/tauri-docs/docs
+          cp -r docs ${{ github.workspace }}/tauri-docs/docs
           mv ARCHITECTURE.md ${{ github.workspace }}/tauri-docs/docs/about/architecture.md
 
       # Indexing
