--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -40,6 +40,7 @@ jobs:
         with:
           repository: tauri-apps/tauri-search-bot
           path: tauri-search-bot
+#           Assuming these are needed for Rust doc generation?
 #       - name: install webkit2gtk
 #         run: |
 #           sudo apt-get update
@@ -63,13 +64,13 @@ jobs:
         working-directory: ./tauri/tooling/api
         run: |
           yarn add typescript typedoc typedoc-plugin-markdown
-          yarn typedoc --plugin typedoc-plugin-markdown --out ../../docs src --tsconfig tsconfig.json --hideInPageTOC true --hideBreadcrumbs true
+          yarn typedoc --plugin typedoc-plugin-markdown --out ../../docs src --tsconfig tsconfig.json --hideInPageTOC true --hideBreadcrumbs true --githubPages false
 
       # Moving docs for Indexation
       - name: copy docs
         working-directory: ./tauri
         run: |
-          cp -r docs ${{ github.workspace }}/tauri-docs/docs
+          cp -r docs ${{ github.workspace }}/tauri-docs
           mv ARCHITECTURE.md ${{ github.workspace }}/tauri-docs/docs/about/architecture.md
 
       # Indexing
