--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -70,7 +70,7 @@ jobs:
       - name: copy docs
         working-directory: ./tauri
         run: |
-          cp -r docs ${{ github.workspace }}/tauri-docs/api/js
+          cp -r docs ${{ github.workspace }}/tauri-docs/docs/api/js
           mv ARCHITECTURE.md ${{ github.workspace }}/tauri-docs/docs/about/architecture.md
 
       # Indexing
